# stromboks-rtic

./: Cargo.toml  README.md  stromboks-rtic.elf
.cargo/: config
src/: main.rs
