[package]
name = "stromboks-rtic"
version = "0.1.0"
edition = "2021"

[dependencies]
panic-halt = "0.2.0"
cortex-m-rtic = "1.1.4"
systick-monotonic = "1.0.1"
usb-device = "0.2.5"
usbd-serial = "0.1.0"
embedded-hal = "0.2.7"
sh1106 = "0.4.0"
embedded-graphics = "0.7.1"

[dependencies.stm32f4xx-hal]
version = "0.15.0"
features = ["stm32f411", "rt", "usb_fs"]
